--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^7.1.0",
+    "http-proxy": "^1.18.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.1.1",
